# STACSHACK-2026

./: .gitignore  README.md  config.js  index.html  main.py  pyproject.toml  requirements.txt
assets/backgrounds/: bg-sun.aseprite
assets/configs/: characters.json
docs/: architecture.md
game/: attack.py  character_select.py  constants.py  main.py  menu.py  sprites.py  stages.json  startMenu.py  startScreen.py  ui.py  utils.py
mediapipe/: main.py
phone-cam/: server.py
phone_cam/: server.py
scripts/: run_dev.py
shared/: bus.py
src/pwp_game/: config.py  main.py
src/pwp_game/camera/: __init__.py  camera_stream.py  multi_camera.py
src/pwp_game/game/: __init__.py  attacks.py  engine.py  state.py
src/pwp_game/pose/: __init__.py  mediapipe_pose.py  pose_classifier.py  pose_defs.py
src/pwp_game/ui/: __init__.py  pygame_ui.py
src/pwp_game/utils/: logging.py
tests/: test_pose_defs.py
vision/: capture_pose.py  draw_landmarks.py  main.py  plank.py  pose_match.py  pose_recognition.py  pose_utils.py  poses.json  recognition.py  squat.py  state.py
vision/poses/: bear.py  bug.py  lunge.py  plank.py  squat.py
