[project]
name = "stacshack-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "flask>=3.1.3",
    "mediapipe>=0.10.33",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "screeninfo>=0.8.1",
    "websockets>=16.0",
]
